--- a/portf_optim.ipynb
+++ b/portf_optim.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "# Strategies\n",
-    " For strategies 3 and 4 include mathematical formulation of optimization problem in report and/or in notebook"
+    " For strategies 3 and 4 I'll include mathematical formulation of the optimization problem in my analysis."
    ]
   },
   {
